Fixing Filters Alignment

--- a/www/css/listings.css
+++ b/www/css/listings.css
@@ -472,7 +472,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
     margin-right: 0.3%;
     opacity: 1;
     padding: 5px 0 0 5px;
-    width: 19.9%;
+    width: 19.5%;
 }
 .filters li:last-child {
     margin-right: 0%;
